--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
   <!-- En-tête de la page -->
   <header class="header container">
 
-    <div class="header__end">
+    <div class="headerend">
 
-      <button class="header__menu-btn menu-btn" aria-label="menu" aria-expanded="false" aria-controls="mainNav">
+      <button class="headermenu-btn menu-btn" aria-label="menu" aria-expanded="false" aria-controls="mainNav">
         🍔
       </button>
 
       <!-- Menu principal -->
-      <nav class="header__menu menu" id="mainNav" aria-hidden="true">
-        <ul class="menu__list list-unstyled">
-          <li class="menu__item">
-            <a class="menu__link" href="#">Item de menu un</a>
+      <nav class="headermenu menu" id="mainNav" aria-hidden="true">
+        <ul class="menulist list-unstyled">
+          <li class="menuitem">
+            <a class="menulink" href="#">Item de menu un</a>
           </li>
-          <li class="menu__item">
-            <a class="menu__link" href="#">Item de menu deux</a>
+          <li class="menuitem">
+            <a class="menulink" href="#">Item de menu deux</a>
           </li>
-          <li class="menu__item">
-            <a class="menu__link" href="#">Item de menu trois</a>
+          <li class="menuitem">
+            <a class="menulink" href="#">Item de menu trois</a>
           </li>
-          <li class="menu__item">
-            <a class="menu__link" href="#">Item de menu quatre</a>
+          <li class="menuitem">
+            <a class="menulink" href="#">Item de menu quatre</a>
           </li>
         </ul>
       </nav>
@@ -42,7 +42,8 @@
   </header>
   <!-- Contenu principal de la page -->
   <main>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et est adipisci repellat aliquid, sit commodi facere
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Et est adipisci repellat aliquid, sit commodi facere
       similique quidem iste sunt accusamus accusantium ab unde dolore quaerat voluptatibus error voluptatem molestiae?
     </p>
   </main>
