--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Menu JS</title>
   <!-- Déclaration de la feuille de style -->
   <link rel="stylesheet" href="/src/css/components/menu.css" />
-  <script type="module" src="/src/js/script.js"></script>
+
 </head>
 
 <body>
@@ -16,7 +16,7 @@
 
     <div class="headerend">
 
-      <button class="headermenu-btn menu-btn" aria-label="menu" aria-expanded="false" aria-controls="mainNav">
+      <button class="menu-btn" aria-label="menu" aria-expanded="false" aria-controls="mainNav">
         🍔
       </button>
 
@@ -50,5 +50,6 @@
   <!-- Fin du contenu principal -->
 
 </body>
+<script src="script.js"></script>
 
 </html>
